# dotfiles

./: .gitignore  .tmux.conf  .zshrc  Makefile  README.md  install.sh  pyproject.toml
.config/custom-nvim/: init.lua
.config/custom-nvim/lua/custom/: chadrc.lua  plugins.lua
.config/custom-nvim/lua/custom/configs/: lspconfig.lua
.github/workflows/: ci.yml
config/i3/: config
config/kitty/: kitty.conf
config/nvim/: init.lua  lazy-lock.json
config/nvim/lua/riceri/: init.lua  remaps.lua  settings.lua
config/nvim/lua/riceri/plugins/: bufferline.lua  fugitive.lua  lsp.lua  nvim-tree.lua  telescope.lua  treesitter.lua
config/polybar/scripts/weather/: weather.sh
config/polybar/themes/minimal/: config.ini
config/polybar/themes/minimal/modules/: date.ini
configs/: linux.yaml  mac.yaml
docs/: usage.md
files/aerospace/: aerospace.toml
files/config/kitty/: kitty.conf
files/config/nvim/lua/riceri/plugins/: telescope.lua
files/config/polybar/: modules.ini
files/i3/: config
files/linearmouse/: linearmouse.json
files/nvim/lua/riceri/: lazy.lua  settings.lua
files/nvim/lua/riceri/plugins/: colorscheme.lua  fugitive.lua  glsl.lua  lualine.lua  nvim-tree.lua  peek.lua  telescope.lua  vimtex.lua
files/polybar/: launch.sh
files/zsh/: .zsh_profile  .zshrc
src/dotfiles/: __init__.py  cli.py  config.py  installer.py
tests/: test_config.py  test_installer.py
tmux/: .tmux.conf
zsh/: .zshrc
